@@ -1,3 +1,7 @@
+16 June 2010: Matthijs
+- Integrate ods-auditor
+- clear command
+
 20 May 2010: Matthijs
 - NSEC (3)
 - sign command
